--- a/package.json
+++ b/package.json
@@ -87,6 +87,9 @@
     "testRegex": "tests/.*\\.(ts|js)$"
   },
   "dependencies": {
-    "typescript": "^3.5.3"
+    "@types/cordova-plugin-file": "^4.3.2",
+    "@types/crypto-js": "^3.1.43",
+    "crypto-js": "^3.1.9-1",
+    "typescript": "3.8.3"
   }
 }
