--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
   ],
   "dependencies": {
     "@types/cordova-plugin-file-transfer": "^1.6.2",
+    "@types/crypto-js": "^3.1.43",
+    "crypto-js": "^3.1.9-1",
     "mkpath": ">=1.0.0",
     "node-version-compare": ">=1.0.1",
     "plist": ">=1.2.0",
